php 入れてみる

--- a/playbook.yml
+++ b/playbook.yml
@@ -4,5 +4,11 @@
   connection: local
   user: vagrant
   tasks:
-    - name: install the latest version of Apache
-      yum: name=httpd state=latest
+    - name: ensure a list of packages installed
+      yum:
+        name: "{{ packages }}"
+      vars:
+        packages:
+        - httpd
+        - httpd-tools
+        - php
