mariadbの自動起動設定追加

--- a/roles/mysql/tasks/install.yml
+++ b/roles/mysql/tasks/install.yml
@@ -5,3 +5,5 @@
     packages:
       - mariadb
       - mariadb-server
+- name: service run mariadb
+  service: name=mariadb  state=started enabled=yes
