httpd 自動起動設定追加

--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -1,8 +1,2 @@
-- name: ensure a list of httpd packages installed
-  yum:
-    name: "{{ packages }}"
-  vars:
-    packages:
-      - httpd
-      - httpd-tools
-      - httpd-devel
+---
+- include: install.yml
